fixed backend bug

--- a/views/createLib.html
+++ b/views/createLib.html
@@ -33,9 +33,9 @@
         <label for="role">Role</label>
         <input type="text" name="role" />
 
-        <button onclick="createLib()" id="createLib">submit</button>
+        <button onclick="owner()" id="ownerLib" >submit</button>
     </form>
     <footer>Copyright &copy 2024 mishrarohit10</footer>
 </body>
-
+<script src="../public/script.js"></script>
 </html>
