fixed frontend bugs

--- a/views/createLib.html
+++ b/views/createLib.html
@@ -34,7 +34,20 @@
         <input type="text" name="role" />
 
         <button onclick="owner()" id="ownerLib" >submit</button>
+
     </form>
+
+    <div class="container">
+        <div>
+            <!-- <h1>Status</h1> -->
+            <h1 id="h"></h1>
+        </div>
+        <!-- <div>
+            <h1>AvailableDate</h1>
+            <h1 id="hh"></h1>
+        </div> -->
+    </div>
+
     <footer>Copyright &copy 2024 mishrarohit10</footer>
 </body>
 <script src="../public/script.js"></script>
