--- a/views/signup.html
+++ b/views/signup.html
@@ -36,5 +36,42 @@
     <footer>Copyright 2023 mishrarohit10</footer>
 
 </body>
-
+<script>
+    const form = document.querySelector('form');
+    const emailError = document.querySelector('.email.error');
+    const passwordError = document.querySelector('.password.error');
+  
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+  
+      // reset errors
+      emailError.textContent = '';
+      passwordError.textContent = '';
+  
+      // get values
+      const email = form.email.value;
+      const password = form.password.value;
+  
+      try {
+        const res = await fetch('/signup', { 
+          method: 'POST', 
+          body: JSON.stringify({ email, password }),
+          headers: {'Content-Type': 'application/json'}
+        });
+        const data = await res.json();
+        console.log(data.error);
+        if (data.error) {
+        //   emailError.textContent = data.error;
+          passwordError.textContent = data.error;
+        }
+        if (data.role) {
+          location.assign(`/${data.role}`);
+        }
+      }
+      catch (err) {
+        console.log(err);
+      }
+  
+    });
+  </script>
 </html>
