changed shop name

--- a/views/index.html
+++ b/views/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Candy Shop</title>
+    <title>Library Shop</title>
     <link rel="stylesheet" href="/styles.css">
 </head>
 
@@ -22,8 +22,15 @@
         </ul>
     </nav>
 
+
+    <!-- ----------------------------------------------------------------------------style------------------------ -->
+
+        
+
+
+        <!-- ----------------------------------------------------------------------------------------------------- -->
     <div class="logo">
-        <img src="/public/peterLib2.jpg" alt="image">
+        <img src="/public/Books_HD_(8314929977).jpg"  alt="image">
     </div>
 
     <div class="headings">
