--- a/views/error.html
+++ b/views/error.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
+    <!-- ----------------------------------------------------------------- -->
+
+<!-- --------------------------------------------------         -->
     <div class="flex-container">
         <div class="text-center">
           <h1>
@@ -14,9 +17,14 @@
             <span class="fade-in" id="digit2">0</span>
             <span class="fade-in" id="digit3">4</span>
           </h1>
-          <h3 class="fadeIn">PAGE NOT FOUND</h3>
-          <button type="button" name="button">Return To Home</button>
+          <h3 class="fadeIn">UnAuthorized</h3>
+          <button onclick="home()" type="button" name="button">Return To Home</button>
         </div>
       </div>
 </body>
-</html>
+<script>
+    function home() {
+        location.assign('/home')
+    }
+</script>
+</html> 
