removed contact us page

--- a/views/reader.html
+++ b/views/reader.html
@@ -12,7 +12,7 @@
     <nav>
         <h1><a href="/home">E-Library</a></h1>
         <ul>
-            <li><a href="/contactus">contact us</a></li>
+            <!-- <li><a href="/contactus">contact us</a></li> -->
             <!-- <% if (user) { %> -->
             <!-- <li>Welcome, <%= user.email %></li> -->
             <li><a href="/logout">Log out</a></li>
