--- a/public/styles.css
+++ b/public/styles.css
@@ -6,7 +6,7 @@ body {
     font-size: 1.2rem;
     letter-spacing: 1px;
     background-image: url('');
-    background-color:rosybrown;
+    background-color:beige;
 }
 
 h1,
