--- a/views/signup.html
+++ b/views/signup.html
@@ -9,7 +9,7 @@
 
 <body>
     <nav>
-        <h1><a href="/home">Candy Shop</a></h1>
+        <h1><a href="/home">Library Shop</a></h1>
         <ul>
             <!-- <li><a href="/contactus">contact us</a></li> -->
             <!-- <% if (user) { %> -->
