--- a/views/admin.html
+++ b/views/admin.html
@@ -27,13 +27,14 @@
         <button onclick="removeBook()" id="delete" type="button">Delete Books</button>
         <button onclick="updateBook()" id="update" type="button">Update Books</button>
         <button onclick="getIssue()" name="issues" id="normal" type="button">Issues</button>
+        <button onclick="goToRaiseissue()" name="resolveIssuebyID" id="update" type="button">Resolve Issue by ID</button>
     </div>
 
     <div class="container">
         <h1></h1>
     </div>
-
-    <footer>Copyright &copy 2024 mishrarohit10</footer>
+<!-- 
+    <footer>Copyright &copy 2024 mishrarohit10</footer> -->
 
 </body>
 <script src="../public/script.js"></script>
