--- a/views/resolveIssue.html
+++ b/views/resolveIssue.html
@@ -41,7 +41,12 @@
 
         <button onclick="resolveIssue()" type="button" >Resolve</button>
     </form>
-    <footer>Copyright &copy 2024 mishrarohit10</footer>
+
+    <div class="container">
+        <h1 id="h"></h1>
+    </div>
+
+    <!-- <footer>Copyright &copy 2024 mishrarohit10</footer> -->
 </body>
 <script src="../public/script.js"></script>
 </html>
