--- a/views/admin.html
+++ b/views/admin.html
@@ -11,14 +11,10 @@
     <nav>
         <h1><a href="/home">E-Library</a></h1>
         <ul>
-            <!-- <li><a href="/contactus">contact us</a></li> -->
-            <!-- <% if (user) { %> -->
-            <!-- <li>Welcome, <%= user.email %></li> -->
+            <h1>{{ printf "%#v" . }}</h1>
             <li><a href="/logout">Log out</a></li>
-            <!-- <% } else { %> -->
             <li><a href="/login">Log in</a></li>
             <li><a href="/signup" class="btn">Sign up</a></li>
-            <!-- <% } %> -->
         </ul>
     </nav>
 
