--- a/views/reader.html
+++ b/views/reader.html
@@ -12,6 +12,7 @@
     <nav>
         <h1><a href="/home">E-Library</a></h1>
         <ul>
+            <h1>{{ printf "%#v" . }}</h1>
             <!-- <li><a href="/contactus">contact us</a></li> -->
             <!-- <% if (user) { %> -->
             <!-- <li>Welcome, <%= user.email %></li> -->
