--- a/views/updateBooks.html
+++ b/views/updateBooks.html
@@ -22,17 +22,6 @@
         </ul>
     </nav>
 
-    <!-- type BookInventory struct {
-        ISBN            int `json:"id" gorm:"primary_key"`
-        LibID           int
-        Title           string
-        Authors         string
-        Publisher       string
-        Version         float32
-        TotalCopies     int
-        AvailableCopies int
-    } -->
-
     <form class="books">
         <h2>Enter Fields</h2>
         <label for="ISBN">ISBN</label>
@@ -57,7 +46,7 @@
         <input type="number" name="totalCopies" />
 
         <label for="availabeCopies">AvailableCopies</label>
-        <input type="number" name="availabeCopies" />
+        <input type="number" name="availableCopies" />
 
         <button onclick="updateBooks()" type="button" >update</button>
     </form>
