changed button type

--- a/views/createLib.html
+++ b/views/createLib.html
@@ -33,7 +33,7 @@
         <label for="role">Role</label>
         <input type="text" name="role" />
 
-        <button onclick="owner()" id="ownerLib" >submit</button>
+        <button onclick="owner()" id="ownerLib" type="submit" >submit</button>
 
     </form>
 
