--- a/views/owner.html
+++ b/views/owner.html
@@ -23,7 +23,7 @@
     </nav>
 
     <div class="button-container">
-        <button onclick="libCreate()" id="create" type="button">Create Library</button>
+        <button onclick="libCreate()" id="create" type="submit" >Create Library</button>
     </div>
 
 
