--- a/views/raiseIssue.html
+++ b/views/raiseIssue.html
@@ -30,7 +30,7 @@
         <label for="email">Email</label>
         <input type="text" name="email" />
 <!-- start here -->
-        <button onclick="raiseIssue()" type="button" >submit</button>
+        <button onclick="raiseIssue()" type="submit" >submit</button>
     </form>
 
     <div class="container">
