--- a/views/searchAuthor.html
+++ b/views/searchAuthor.html
@@ -28,7 +28,7 @@
         <label for="author">Enter Author</label>
         <input type="text" name="author" />
 
-        <button onclick="searchByAuthor()" id="searchA" type="button">search</button>
+        <button onclick="searchByAuthor()" id="searchA" type="submit" >search</button>
     </form>
 
     <div class="container">
