--- a/views/addBooks.html
+++ b/views/addBooks.html
@@ -51,6 +51,11 @@
 
         <button onclick="addBooks()" type="button" >add</button>
     </form>
+
+    <div class="container">
+        <h1 id="h"></h1>
+    </div>
+
     <footer>Copyright &copy 2024 mishrarohit10</footer>
 </body>
 <script src="../public/script.js"></script>
