--- a/views/removeBook.html
+++ b/views/removeBook.html
@@ -39,7 +39,7 @@
         <label for="id">Enter Id</label>
         <input type="number" name="id" />
 
-        <button onclick="deleteBook()" type="submit" >delete</button>
+        <button onclick="deleteBook()" type="button" >delete</button>
     </form>
     <footer>Copyright &copy 2024 mishrarohit10</footer>
 </body>
