--- a/views/resolveIssue.html
+++ b/views/resolveIssue.html
@@ -39,7 +39,7 @@
         <label for="id">Enter Id</label>
         <input type="number" name="id" />
 
-        <button onclick="resolveIssue()" type="submit" >Resolve</button>
+        <button onclick="resolveIssue()" type="button" >Resolve</button>
     </form>
 
     <div class="container">
