--- a/views/searchPublisher.html
+++ b/views/searchPublisher.html
@@ -28,7 +28,7 @@
         <label for="publisher">Enter Publisher</label>
         <input type="text" name="publisher" />
 
-        <button onclick="searchByPublisher()" id="search" type="submit" >search</button>
+        <button onclick="searchByPublisher()" id="search" type="button" >search</button>
     </form>
 
     <div class="container">
