--- a/views/searchTitle.html
+++ b/views/searchTitle.html
@@ -28,7 +28,7 @@
         <label for="title">Enter Title</label>
         <input type="text" name="title" />
 
-        <button onclick="searchByTitle()" id="searchT" type="submit" >search</button>
+        <button onclick="searchByTitle()" id="searchT" type="button" >search</button>
     </form>
 
     <div class="container">
