--- a/views/raiseIssue.html
+++ b/views/raiseIssue.html
@@ -29,8 +29,8 @@
 
         <label for="email">Email</label>
         <input type="text" name="email" />
-<!-- start here -->
-        <button onclick="raiseIssue()" type="submit" >submit</button>
+        
+        <button onclick="raiseIssue()" type="button" >submit</button>
     </form>
 
     <div class="container">
