--- a/views/searchTitle.html
+++ b/views/searchTitle.html
@@ -34,12 +34,12 @@
     <div class="container">
         <div>
             <!-- <h1>Status</h1> -->
-            <h1 id="h"></h1>
+            <h1 id="h">Available Status</h1>
         </div>
-        <!-- <div>
-            <h1>AvailableDate</h1>
+        <div>
+            <h1></h1>
             <h1 id="hh"></h1>
-        </div> -->
+        </div>
     </div>
 
     <footer>Copyright &copy 2024 mishrarohit10</footer>
