--- a/public/styles.css
+++ b/public/styles.css
@@ -1,12 +1,15 @@
 /* google fonts */
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap'); */
 
 body {
     margin: 20px 40px;
     font-size: 1.2rem;
     letter-spacing: 1px;
-    background-image: url('');
-    background-color:lightseagreen;
+    background-image: url('https://img.freepik.com/free-vector/realistic-silver-stars-background_52683-103058.jpg?size=626&ext=jpg&ga=GA1.1.735520172.1710115200&semt=ais');
+    background-color: white;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: left top;
 }
 
 h1,
@@ -63,7 +66,7 @@ nav li a {
 
 .btn {
     border-radius: 36px;
-    background: lightpink;
+    background: lightskyblue;
 }
 
 form h2 {
@@ -98,7 +101,7 @@ label {
 button {
     margin-top: 30px;
     border-radius: 36px;
-    background: lightpink;
+    background: lightskyblue;
     border: 0;
     text-transform: uppercase;
     font-weight: 700;
@@ -183,6 +186,12 @@ footer {
     color: black;
 }
 
+#getAllBooks:hover {
+    text-align: center;
+    border: 2px solid black;
+    background-color: lightslategray;
+    color: black;
+}
 
 #delete:hover {
     text-align: center;
@@ -216,6 +225,8 @@ footer {
 .button-container {
     display: flex;
     justify-content: center;
+    margin: 50 auto;
+    /* padding: 30px; */
 }
 
 .books {
@@ -229,9 +240,9 @@ footer {
 
 .logo img {
     display: block;
-    margin-left: auto;
+    margin-left: 0;
     margin-right: auto;
-    width: 30%;
+    width: 10%;
 }
 
 .container {
@@ -258,6 +269,4 @@ footer {
 .card p {
     margin: 10px 0;
 }
-
-/* -------------------error------------------------- */
 
