--- a/views/admin.html
+++ b/views/admin.html
@@ -29,10 +29,9 @@
     <div class="container">
         <h1 id="h"></h1>
     </div>
-<!-- 
-    <footer>Copyright &copy 2024 mishrarohit10</footer> -->
+
 
 </body>
 <script src="../public/script.js"></script>
-
+<!-- <footer>Copyright &copy 2024 mishrarohit10</footer> -->
 </html>
