--- a/views/error.html
+++ b/views/error.html
@@ -1,30 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/styles.css">
-</head>
-<body>
-    <!-- ----------------------------------------------------------------- -->
 
-<!-- --------------------------------------------------         -->
-    <div class="flex-container">
-        <div class="text-center">
-          <h1>
-            <span class="fade-in" id="digit1">4</span>
-            <span class="fade-in" id="digit2">0</span>
-            <span class="fade-in" id="digit3">4</span>
-          </h1>
-          <h3 class="fadeIn">UnAuthorized</h3>
-          <button onclick="home()" type="button" name="button">Return To Home</button>
-        </div>
-      </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Unauthorized</title>
+</head>
+
+<body>
+  
 </body>
-<script>
-    function home() {
-        location.assign('/home')
-    }
-</script>
-</html> 
+
+</html>
