changed ui added css styles

--- a/views/signup.html
+++ b/views/signup.html
@@ -30,7 +30,7 @@
         <label for="password">Password</label>
         <input type="password" name="password" required />
         <div class="password error"></div>
-        <button>Sign up</button>
+        <button class="btn">Sign up</button>
     </form>
 
 
