--- a/public/styles.css
+++ b/public/styles.css
@@ -5,11 +5,11 @@ body {
     margin: 20px 40px;
     font-size: 1.2rem;
     letter-spacing: 1px;
-    background-image: url('https://img.freepik.com/free-vector/realistic-silver-stars-background_52683-103058.jpg?size=626&ext=jpg&ga=GA1.1.735520172.1710115200&semt=ais');
+    background-image: url('https://t3.ftcdn.net/jpg/06/83/05/70/240_F_683057043_Bd1iGrv1W11SFDv68UJyS1VRmzd0Sz9f.jpg');
     background-color: white;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: left top;
+    /* background-size:cover; */
+    /* background-repeat: no-repeat; */
+    background-position: center;
 }
 
 h1,
@@ -44,6 +44,7 @@ nav {
     justify-content: space-between;
     align-items: flex-end;
     margin-bottom: 120px;
+    /* background-color: #ddd; */
 }
 
 nav ul {
@@ -64,9 +65,23 @@ nav li a {
     letter-spacing: 2px;
 }
 
+h1:hover {
+    font-size: 50px;
+}
+
 .btn {
     border-radius: 36px;
-    background: lightskyblue;
+    background: lightsalmon;
+}
+
+
+ul li:hover {
+    /* border-radius: 36px; */
+    text-align: center;
+    /* border: 2px solid black; */
+    /* background-color: lightsteelblue; */
+    color: black;
+    font-size: 50px;
 }
 
 form h2 {
@@ -101,7 +116,7 @@ label {
 button {
     margin-top: 30px;
     border-radius: 36px;
-    background: lightskyblue;
+    background: lightsalmon;
     border: 0;
     text-transform: uppercase;
     font-weight: 700;
@@ -184,20 +199,22 @@ footer {
     border: 2px solid black;
     background-color: lightgreen;
     color: black;
+    font-size: 30px;
 }
 
 #getAllBooks:hover {
     text-align: center;
     border: 2px solid black;
-    background-color: lightslategray;
+    background-color: orchid;
     color: black;
-}
+    font-size: 30px;}
 
 #delete:hover {
     text-align: center;
     border: 2px solid black;
     background-color: lightcoral;
     color: black;
+    font-size: 30px;
 }
 
 
@@ -213,6 +230,7 @@ footer {
     border: 2px solid black;
     background-color: lightgoldenrodyellow;
     color: black;
+    font-size: 30px;
 }
 
 #normal:hover {
@@ -220,13 +238,18 @@ footer {
     border: 2px solid black;
     background-color: lightseagreen;
     color: black;
+    font-size: 30px;
+}
+
+.headings h2:hover {
+    font-size: 100px;
 }
 
 .button-container {
-    display: flex;
-    justify-content: center;
-    margin: 50 auto;
-    /* padding: 30px; */
+    display:flex;
+    justify-content: space-between;
+    margin: 5 auto;
+    padding: 30px;
 }
 
 .books {
@@ -259,14 +282,29 @@ footer {
     width: 300px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     background-color: #fff;
+    opacity: 0.5;
 }
 
-.card h2 {
+.card h1 {
     font-size: 20px;
     margin: 0;
+    color: black;
 }
 
 .card p {
     margin: 10px 0;
+    color: black;
 }
 
+ .card:hover {
+    border: 2px solid black;
+    background-color: lightsalmon;
+    color: black;
+    font-size: 50px;
+}
+
+.card h1:hover {
+    background-color: lightsalmon;
+    color: black;
+    font-size: 50px;
+}
