--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+
     <nav>
         <h1><a href="/home">E-Library</a></h1>
         <ul>
@@ -22,8 +23,9 @@
         </ul>
     </nav>
 
+
     <div class="logo">
-        <img src="/public/Books_HD_(8314929977).jpg"  alt="image">
+        <!-- <img src="/public/Books_HD_(8314929977).jpg"  alt="image"> -->
     </div>
 
     <div class="headings">
@@ -31,11 +33,11 @@
         <h3>By mishrarohit10</h3>
     </div>
 
-    <div class="button-container">
+    <div class="button-container" style="justify-content: center;">
         <button onclick="removeBook()" id="update" type="button">Admin</button>
     </div>
 
-    <div class="button-container">
+    <div class="button-container" style="justify-content: center;">
         <button onclick="updateBook()" id="normal" type="button">Reader</button>
     </div>
 
@@ -48,8 +50,8 @@
     function updateBook() {
         location.assign("/reader")
     }
-   
+
 </script>
 <!-- <footer>Copyright &copy 2024 mishrarohit10</footer> -->
-</html>
 
+</html>
