--- a/views/login.html
+++ b/views/login.html
@@ -26,7 +26,7 @@
         <label for="password">Password</label>
         <input type="password" name="password" />
         <div class="password error"></div>
-        <button>login</button>
+        <button class="btn">login</button>
     </form>
 
 </body>
