--- a/views/removeBook.html
+++ b/views/removeBook.html
@@ -41,6 +41,10 @@
 
         <button onclick="deleteBook()" type="button" >delete</button>
     </form>
+
+    <div class="container">
+        <h1 id="h"></h1>
+    </div>
     <footer>Copyright &copy 2024 mishrarohit10</footer>
 </body>
 <script src="../public/script.js"></script>
