--- a/views/admin.html
+++ b/views/admin.html
@@ -19,19 +19,20 @@
     </nav>
 
     <div class="button-container">
-        <button onclick="addBook()" id="create" type="button" >Add Books</button>
+        <button onclick="addBook()" id="create" type="button">Add Books</button>
         <button onclick="removeBook()" id="delete" type="button">Delete Books</button>
         <button onclick="updateBook()" id="update" type="button">Update Books</button>
         <button onclick="getIssue()" name="issues" id="normal" type="button">Issues</button>
-        <button onclick="goToRaiseissue()" name="resolveIssuebyID" id="update" type="button">Resolve Issue by ID</button>
+        <button onclick="goToRaiseissue()" name="resolveIssuebyID" id="update" type="button">Resolve Issue by
+            ID</button>
     </div>
 
     <div class="container">
         <h1 id="h"></h1>
     </div>
 
-
 </body>
 <script src="../public/script.js"></script>
 <!-- <footer>Copyright &copy 2024 mishrarohit10</footer> -->
+
 </html>
