--- a/views/login.html
+++ b/views/login.html
@@ -48,7 +48,7 @@
     const password = form.password.value;
 
     try {
-      const res = await fetch('/login', {
+      const res = await fetch('/api/login', {
         method: 'POST',
         body: JSON.stringify({ email, password }),
         headers: { 'Content-Type': 'application/json' }
