--- a/views/signup.html
+++ b/views/signup.html
@@ -52,7 +52,7 @@
       const password = form.password.value;
   
       try {
-        const res = await fetch('/signup', { 
+        const res = await fetch('/api/signup', { 
           method: 'POST', 
           body: JSON.stringify({ email, password }),
           headers: {'Content-Type': 'application/json'}
